name:                tools
version:             0.1.0.0
author:              hiogawa
maintainer:          hi.ogawa.zz@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:     base >= 4 && < 5
                   , ghc-mod
                   , stylish-haskell
                   , hlint
                   , hspec
  default-language:  Haskell2010
